--- a/estilos/style.css
+++ b/estilos/style.css
@@ -12,10 +12,15 @@ html, body {
     background-color: black;
 }
 
+body {
+    background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
 main {
     position: relative;
     height: 100vh;
-    background-color: gray;
 }
 
 section#telefone {
@@ -23,7 +28,17 @@ section#telefone {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 500px;
-    width: 500px;
+
+    height: 627px;
+    width: 311px;
     background-color: white;
+    background: url(../imagens/frame-iphone.png);
+}
+
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
 }
